--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "commonjs",
     "lib": ["es6"],
     "allowJs": true,
-    "outDir": "bin",
+    "outDir": "build",
     "rootDir": "src",
     "strict": true,
     "noImplicitAny": true,
