--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
     "skipLibCheck": true,
     "types": ["node"]
   },
-  "exclude": ["example_modules"]
+  "exclude": ["example_modules", "dist", "build"]
 }
