--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "commonjs",
     "lib": ["es6"],
     "allowJs": true,
-    "outDir": "bin",
+    "outDir": "build",
     "rootDir": "src",
     "strict": true,
     "noImplicitAny": true,
@@ -13,5 +13,5 @@
     "skipLibCheck": true,
     "types": ["node"]
   },
-  "exclude": ["examples", "dist", "bin"]
+  "exclude": ["examples", "dist", "build"]
 }
