update: added one command for creating output and made some fixes

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "node-cli": "build/index.js"
   },
   "pkg": {
-    "scripts": "build/index.js"
+    "scripts": [
+      "build/index.js"
+    ]
   },
   "scripts": {
     "start": "node build/index.js",
@@ -29,5 +31,8 @@
     "rimraf": "^6.0.1",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3"
+  },
+  "dependencies": {
+    "ansi-colors": "^4.1.3"
   }
 }
